--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "@types/node": "20.4.1",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
-    "eslint": "8.44.0",
+    "antd": "^5.7.0",
+    "eslint": "7.32.0",
     "eslint-config-next": "13.4.9",
     "next": "13.4.9",
+    "prettier": "^2.8.8",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "sass": "^1.63.6",
     "typescript": "5.1.6"
   }
 }
