--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "@types/node": "20.4.1",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
-    "antd": "^5.7.0",
     "eslint": "7.32.0",
     "eslint-config-next": "13.4.9",
     "next": "13.4.9",
@@ -20,6 +19,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sass": "^1.63.6",
+    "semantic-ui-css": "^2.5.0",
+    "semantic-ui-react": "^2.1.4",
     "typescript": "5.1.6"
   }
 }
